[gd_scene load_steps=8 format=2]

[ext_resource path="res://Scripts/TurretPopup.gd" type="Script" id=1]
[ext_resource path="res://Assets/Art/UI/Turrets/turret.png" type="Texture" id=2]
[ext_resource path="res://Assets/Art/UI/Turrets/turret_hover.png" type="Texture" id=3]
[ext_resource path="res://Assets/Fonts/font_size_24.tres" type="DynamicFont" id=4]
[ext_resource path="res://Assets/Fonts/name_font.tres" type="DynamicFont" id=5]
[ext_resource path="res://Assets/Sfx/error2.wav" type="AudioStream" id=6]
[ext_resource path="res://Assets/Sfx/select.wav" type="AudioStream" id=7]

[node name="TurretPopup" type="CanvasLayer"]
layer = 100
script = ExtResource( 1 )

[node name="PanelContainer" type="MarginContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -320.0
margin_top = -128.0
margin_right = 320.0
margin_bottom = 128.0

[node name="Turrets" type="HBoxContainer" parent="PanelContainer"]
margin_right = 640.0
margin_bottom = 256.0
custom_constants/separation = 70
alignment = 1

[node name="Small" type="VBoxContainer" parent="PanelContainer/Turrets"]
margin_left = 67.0
margin_right = 189.0
margin_bottom = 256.0
custom_constants/separation = 30
alignment = 1

[node name="Type" type="TextureButton" parent="PanelContainer/Turrets/Small"]
modulate = Color( 1, 0.585938, 0.585938, 1 )
margin_top = 16.0
margin_right = 122.0
margin_bottom = 166.0
mouse_filter = 1
size_flags_horizontal = 6
toggle_mode = true
texture_normal = ExtResource( 2 )
texture_hover = ExtResource( 3 )
stretch_mode = 3

[node name="Price" type="Button" parent="PanelContainer/Turrets/Small"]
margin_top = 196.0
margin_right = 122.0
margin_bottom = 239.0
custom_fonts/font = ExtResource( 4 )
disabled = true
text = "100"

[node name="Medium" type="VBoxContainer" parent="PanelContainer/Turrets"]
margin_left = 259.0
margin_right = 381.0
margin_bottom = 256.0
custom_constants/separation = 30
alignment = 1

[node name="Type" type="TextureButton" parent="PanelContainer/Turrets/Medium"]
modulate = Color( 1, 0.857666, 0.585938, 1 )
margin_top = 16.0
margin_right = 122.0
margin_bottom = 166.0
mouse_filter = 1
size_flags_horizontal = 6
toggle_mode = true
texture_normal = ExtResource( 2 )
texture_hover = ExtResource( 3 )
stretch_mode = 3

[node name="Price" type="Button" parent="PanelContainer/Turrets/Medium"]
margin_top = 196.0
margin_right = 122.0
margin_bottom = 239.0
custom_fonts/font = ExtResource( 4 )
disabled = true
text = "400"

[node name="Big" type="VBoxContainer" parent="PanelContainer/Turrets"]
margin_left = 451.0
margin_right = 573.0
margin_bottom = 256.0
custom_constants/separation = 30
alignment = 1

[node name="Type" type="TextureButton" parent="PanelContainer/Turrets/Big"]
modulate = Color( 0.664062, 0.937012, 1, 1 )
margin_top = 16.0
margin_right = 122.0
margin_bottom = 166.0
mouse_filter = 1
size_flags_horizontal = 6
toggle_mode = true
texture_normal = ExtResource( 2 )
texture_hover = ExtResource( 3 )

[node name="Price" type="Button" parent="PanelContainer/Turrets/Big"]
margin_top = 196.0
margin_right = 122.0
margin_bottom = 239.0
custom_fonts/font = ExtResource( 4 )
disabled = true
text = "1000"

[node name="CloseButton" type="Button" parent="PanelContainer"]
margin_right = 36.0
margin_bottom = 54.0
size_flags_horizontal = 2
size_flags_vertical = 2
custom_fonts/font = ExtResource( 5 )
text = "x"

[node name="Error" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )

[node name="PressedSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
volume_db = -5.0

[connection signal="pressed" from="PanelContainer/Turrets/Small/Type" to="." method="_on_small_pressed"]
[connection signal="pressed" from="PanelContainer/Turrets/Small/Price" to="." method="_on_Small_Price_pressed"]
[connection signal="pressed" from="PanelContainer/Turrets/Medium/Type" to="." method="_on_medium_pressed"]
[connection signal="pressed" from="PanelContainer/Turrets/Medium/Price" to="." method="_on_Medium_Price_pressed"]
[connection signal="pressed" from="PanelContainer/Turrets/Big/Type" to="." method="_on_big_pressed"]
[connection signal="pressed" from="PanelContainer/Turrets/Big/Price" to="." method="_on_Big_Price_pressed"]
[connection signal="pressed" from="PanelContainer/CloseButton" to="." method="_on_CloseButton_pressed"]
